<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoftApp</string>
    <string name="versao">SoftApp v1.23</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="salvar_senha">Salvar senha</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_agenda">SOFTPLACE-Agenda</string>
    <string name="title_activity_main">SOFTPLACE-Agenda</string>

    <color name="white">#ffffff</color>
    <color name="red">#ff0000</color>

    <string name="title_activity_endereco">SOFTPLACE-Agenda</string>
    <string name="title_activity_calendar">SOFTPLACE-Agenda</string>
    <string name="title_activity_detalhes">Dados do Pedido</string>
    <string name="title_activity_anexo">Anexos</string>
    <string name="title_activity_reagendar">Alterar Data</string>
    <string name="title_activity_nf">Busca por NF</string>
    <string name="reagendar">Nova Data</string>
    <string name="encerrar">Encerrar</string>
    <string name="confirma">Confirmar</string>
    <string name="cancela">Cancelar</string>
    <string name="limpa">Limpar</string>
    <string name="assina">Assinar</string>
    <string name="grava">Gravar</string>
    <string name="observacoes">Observações</string>
    <string name="assinatura">Assinatura do Cliente</string>
    <string name="title_activity_encerrar">SOFTPLACE-Agenda</string>
    <string name="nome">Nome</string>
    <string name="documento">Documento</string>
    <string name="email">Email</string>
    <string name="title_activity_assinatura">Assinatura</string>
    <string name="wait">Aguarde...</string>

</resources>
