<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="xavier.ricardo.softapp.EncerrarActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacoes" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:inputType="textFilter|textMultiLine"
            android:lines="10" >
        </EditText>

        <TextView
            android:id="@+id/tvAssinatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assinatura" />

        <view
            android:id="@+id/vwAssinaturaRO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="xavier.ricardo.softapp.DrawView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btAssinar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="assina"
                android:text="@string/assina" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/documento" />

        <EditText
            android:id="@+id/etDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btConfirma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="confirma"
                android:text="@string/confirma" />

            <Button
                android:id="@+id/btCancela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancela"
                android:text="@string/cancela" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
